# helse-styringsinfo-datafortelling

./: .gitignore  Dockerfile  Makefile  README.md  _quarto.yml  copy  custom.scss  env.example  index.ipynb  index.qmd  main.py  publish.sh  pyproject.toml  requirements.txt  vedtak_fattet_mangler_søknad.py
.github/workflows/: alert-config.yml  alerts.yml  deploy.yml  master.yml
deploy/: alert-config-dev.yml  alerts.yml  dev-run-on-schedule.yml  dev-run-once.yml  dev.yml  naisjob.yml  prod-run-on-schedule.yml  prod-run-once.yml  prod.yml
figurer/: fig_antall_avsluttet_uten_utbetaling.py  fig_antall_med_glidende_gjennomsnitt.py  fig_antall_vedtak_fattet.py  fig_mottatte_søknader.py  fig_tid_fra_søknad_til_vedtak.py
flexjar/src/: tilbakemelding.qmd
index_files/libs/bootstrap/: bootstrap.min.css
src/figurer/: __init__.py  fig_antall_avsluttet_uten_utbetaling.py  fig_antall_med_glidende_gjennomsnitt.py  fig_mottatte_søknader.py  fig_tid_fra_søknad_til_vedtak.py
