[tool.poetry]
name = "styringsinfo-datafortelling"
version = "0.1.0"
description = ""
authors = ["Nils Jørgen Mittet <nils.jorgen.mittet@nav.no>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
google-cloud-bigquery = "3.11.0"
ipykernel = "6.22.0"
nbclient = "0.8.0"
pandas = "2.0.3"
db-dtypes = "1.1.1"
python-dotenv = "1.0.0"
tabulate = "0.9.0"
plotly = "5.15.0"
pandas-gbq = "0.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
